--- a/WeatherApp/src/app/components/weather-result/weather-result.component.scss
+++ b/WeatherApp/src/app/components/weather-result/weather-result.component.scss
@@ -7,6 +7,28 @@
   margin: 0 auto;
 }
 
+.weather-info-card {
+  background-color: rgba(255, 255, 255, 0.3); /* Sfondo bianco trasparente */
+  border-radius: 20px;
+  padding: 20px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2); /* Ombra */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.weather-detail {
+  text-align: center;
+  padding: 10px;
+}
+
+.weather-icon {
+  width: 50px;
+  height: 50px;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -24,8 +46,9 @@
   border-radius: 10px;
   text-align: center;
   margin: 10px;
+  padding: 10px;
+  min-height: 200px;
 }
-
 
 .icon-size {
   width: 40px;
@@ -40,7 +63,6 @@
     gap: 20px;
   }
 }
-
 
 .forecast-grid {
   display: grid;
